# transaction

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md  archive.sh  dev-requirements.txt  noxfile.py  pyproject.toml
.github/: FUNDING.yaml
.github/workflows/: nox.yaml
tests/: conftest.py  test_version.py
tests/end2end/: test_sync_functions.py
tests/examples/: test_example_1.py  test_example_2.py  test_example_3.py  test_example_5.py  test_example_6.py  test_example_7.py
tests/test_decorator/: test_transaction_decorator.py  test_transaction_decorator_additional.py
tests/test_function_call/: test_export_import.py  test_function_call.py  test_function_call_additional.py
tests/test_helper/: conftest.py  test_helper_async.py  test_helper_sync.py
tests/test_helpers/: test_function_type.py  test_get_function_type_comprehensive.py
tests/test_transaction_state/: test_end_2_end.py  test_export_import.py  test_get_current.py  test_sync_rollback.py  test_transaction_state_additional.py
transaction/: __init__.py  decorator.py  helpers.py
transaction/classes/: __init__.py  function_call.py  transaction_state.py
